Add sp1 message
