# docs/static/openapi.yml
@@ -4,6 +4,42 @@ info:
   name: ''
   description: ''
 paths:
+  /alignedlayer/verify/params:
+    get:
+      summary: Parameters queries the parameters of the module.
+      operationId: AlignedlayerVerifyQuery_Params
+      responses:
+        '200':
+          description: A successful response.
+          schema:
+            type: object
+            properties:
+              params:
+                description: params holds all the parameters of this module.
+                type: object
+            description: >-
+              QueryParamsResponse is response type for the Query/Params RPC
+              method.
+        default:
+          description: An unexpected error response.
+          schema:
+            type: object
+            properties:
+              code:
+                type: integer
+                format: int32
+              message:
+                type: string
+              details:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    '@type':
+                      type: string
+                  additionalProperties: {}
+      tags:
+        - Query
   /alignedlayer.verify.Msg/CairoPlatinum:
     post:
       operationId: AlignedlayerVerifyMsg_CairoPlatinum
@@ -83,6 +119,45 @@ paths:
               publicInputs:
                 type: string
               verifyingKey:
+                type: string
+      tags:
+        - Msg
+  /alignedlayer.verify.Msg/Sp1:
+    post:
+      operationId: AlignedlayerVerifyMsg_Sp1
+      responses:
+        '200':
+          description: A successful response.
+          schema:
+            type: object
+        default:
+          description: An unexpected error response.
+          schema:
+            type: object
+            properties:
+              code:
+                type: integer
+                format: int32
+              message:
+                type: string
+              details:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    '@type':
+                      type: string
+                  additionalProperties: {}
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            type: object
+            properties:
+              creator:
+                type: string
+              proof:
                 type: string
       tags:
         - Msg
@@ -3766,48 +3841,6 @@ paths:
       tags:
         - Msg
 definitions:
-  alignedlayer.verify.MsgCairoPlatinum:
-    type: object
-    properties:
-      creator:
-        type: string
-      proof:
-        type: string
-  alignedlayer.verify.MsgCairoPlatinumResponse:
-    type: object
-  alignedlayer.verify.MsgGnarkPlonk:
-    type: object
-    properties:
-      creator:
-        type: string
-      proof:
-        type: string
-      publicInputs:
-        type: string
-      verifyingKey:
-        type: string
-  alignedlayer.verify.MsgGnarkPlonkResponse:
-    type: object
-  alignedlayer.verify.MsgUpdateParams:
-    type: object
-    properties:
-      authority:
-        type: string
-        description: >-
-          authority is the address that controls the module (defaults to x/gov
-          unless overwritten).
-      params:
-        description: 'NOTE: All parameters must be supplied.'
-        type: object
-    description: MsgUpdateParams is the Msg/UpdateParams request type.
-  alignedlayer.verify.MsgUpdateParamsResponse:
-    type: object
-    description: |-
-      MsgUpdateParamsResponse defines the response structure for executing a
-      MsgUpdateParams message.
-  alignedlayer.verify.Params:
-    type: object
-    description: Params defines the parameters for the module.
   google.protobuf.Any:
     type: object
     properties:
@@ -4143,6 +4176,64 @@ definitions:
                   "@type": "type.googleapis.com/google.protobuf.Duration",
                   "value": "1.212s"
                 }
+  alignedlayer.verify.Params:
+    type: object
+    description: Params defines the parameters for the module.
+  alignedlayer.verify.QueryParamsResponse:
+    type: object
+    properties:
+      params:
+        description: params holds all the parameters of this module.
+        type: object
+    description: QueryParamsResponse is response type for the Query/Params RPC method.
+  alignedlayer.verify.MsgCairoPlatinum:
+    type: object
+    properties:
+      creator:
+        type: string
+      proof:
+        type: string
+  alignedlayer.verify.MsgCairoPlatinumResponse:
+    type: object
+  alignedlayer.verify.MsgGnarkPlonk:
+    type: object
+    properties:
+      creator:
+        type: string
+      proof:
+        type: string
+      publicInputs:
+        type: string
+      verifyingKey:
+        type: string
+  alignedlayer.verify.MsgGnarkPlonkResponse:
+    type: object
+  alignedlayer.verify.MsgSp1:
+    type: object
+    properties:
+      creator:
+        type: string
+      proof:
+        type: string
+  alignedlayer.verify.MsgSp1Response:
+    type: object
+  alignedlayer.verify.MsgUpdateParams:
+    type: object
+    properties:
+      authority:
+        type: string
+        description: >-
+          authority is the address that controls the module (defaults to x/gov
+          unless overwritten).
+      params:
+        description: 'NOTE: All parameters must be supplied.'
+        type: object
+    description: MsgUpdateParams is the Msg/UpdateParams request type.
+  alignedlayer.verify.MsgUpdateParamsResponse:
+    type: object
+    description: |-
+      MsgUpdateParamsResponse defines the response structure for executing a
+      MsgUpdateParams message.
   cosmos.auth.v1beta1.MsgUpdateParams:
     type: object
     properties:
